@@ -99,7 +99,7 @@ public class PackagingConfiguration {
         if (makeConfiguration.isMakefileConfiguration()) {
             perm = MakeOptions.getInstance().getDefExePerm();
             packageDir = "${PACKAGE_TOP_DIR}bin"; // NOI18N
-        } else if (makeConfiguration.isApplicationConfiguration()) {
+        } else if (makeConfiguration.isApplicationConfiguration() || makeConfiguration.isQmakeConfiguration()) {
             perm = MakeOptions.getInstance().getDefExePerm();
             packageDir = "${PACKAGE_TOP_DIR}bin"; // NOI18N
             if (makeConfiguration.getPlatform().getValue() == Platform.PLATFORM_WINDOWS) {
@@ -259,16 +259,16 @@ public class PackagingConfiguration {
     }
 
     @Override
-    public Object clone() {
+    public PackagingConfiguration clone() {
         PackagingConfiguration clone = new PackagingConfiguration(getMakeConfiguration());
-        clone.setType((StringConfiguration) getType().clone());
-        clone.setVerbose((BooleanConfiguration) getVerbose().clone());
+        clone.setType(getType().clone());
+        clone.setVerbose(getVerbose().clone());
         clone.setInfo(getInfo().cloneConf());
         clone.setFiles(getFiles().cloneConf());
-        clone.setOutput((StringConfiguration) getOutput().clone());
-        clone.setTool((StringConfiguration) getTool().clone());
-        clone.setOptions((StringConfiguration) getOptions().clone());
-        clone.setTopDir((StringConfiguration) getTopDir().clone());
+        clone.setOutput(getOutput().clone());
+        clone.setTool(getTool().clone());
+        clone.setOptions(getOptions().clone());
+        clone.setTopDir(getTopDir().clone());
         return clone;
     }
     TypePropertyChangeListener typePropertyChangeListener;
@@ -336,7 +336,7 @@ public class PackagingConfiguration {
         
         @Override
         public Object getValue() {
-            return new Integer(PackagerManager.getDefault().getNameIndex(getType().getValue()));
+            return Integer.valueOf(PackagerManager.getDefault().getNameIndex(getType().getValue()));
         }
     
         @Override
@@ -463,8 +463,8 @@ public class PackagingConfiguration {
         }
 
         @Override
-        public void setValue(Object v) {
-            if (IpeUtils.hasMakeSpecialCharacters((String) v)) {
+        public void setValue(String v) {
+            if (IpeUtils.hasMakeSpecialCharacters(v)) {
                 DialogDisplayer.getDefault().notify(new NotifyDescriptor.Message(getString("SPECIAL_CHARATERS_ERROR"), NotifyDescriptor.ERROR_MESSAGE));
                 return;
             }
